=== 2013-07-07

* Enhancements:
  * Upgraded Ruby 1.8.7 to patchlevel 374
  * Upgraded Ruby 1.9.3 to patchlevel 448
  * Upgraded Ruby 2.0.0 to patchlevel 247

=== 2013-05-17

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 429
  * Upgraded Ruby 2.0.0 to patchlevel 195

=== 2013-02-24 / Happy Birthday Ruby Edition!

* Enhancements:
  * Upgraded Ruby 2.0.0 to patchlevel 0
  * Upgraded rb-readline to 0.5.0.pre.1 (compatible with Ruby 2.0)

* Bugfixes:
  * Generate documentation for target version of Ruby

=== 2013-02-22

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 392
  * Upgraded OpenSSL to version 1.0.0k

=== 2013-02-07

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 385

=== 2013-01-17

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 374

=== 2012-12-25 / X-mas Edition

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 362

* Bugfixes:
  * Fix Japanese support in the installer. #139 #142 [mame]

=== 2012-11-09

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 327
  * Update mingwbuilds-32-4.7.2 to rev1
  * Retire build support for mingw64-32-4.6.3 DevKit
  * Add support for Ruby 2.0.0-preview1 (use NEXT option)

    rake ruby19 NEXT=1

* Bugfixes:
  * Disable Japanese support until changes to #139 are made

=== 2012-10-21

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 286
  * Upgraded Ruby 1.8.7 to patchlevel 371
  * Retire build support for mingw-32-4.5.2 DevKit
  * Add MinGW-w64 v2.0.7 header/CRT update to mingw64-{34,64}-4.7.2
  * Add tdm-32-4.7.1 and tdm-64-4.7.1 support
  * Changed mingw64-32-4.7.2 to use i686-w64-mingw32-gcc-4.7.2-release-win32_rubenvb
  * Add 64bits GCC 4.7.2 from mingw-w64 project (rubenvb builds)
  * Added mingwbuilds-32-4.7.2 support
  * Convert gdbm recipe to use Knapsack binaries
  * Convert pdcurses recipe to use Knapsack binaries
  * Convert tcl and tk recipes to use Knapsack binaries

* Bugfixes:
  * Decreased file descriptors for 1.9.x to 2K. Closes #104 (again)